# Weyvelength

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Weyvelength.sln
Client/: CMakeLists.txt  Client.vcxproj  Client.vcxproj.filters  vcpkg.json
Client/include/: weyvelength.h
Client/include/private/: client.h  marshal.h  p2p_mesh.h
Client/src/: client.cpp  p2p_mesh.cpp  test.cpp  weyvelength.cpp
ClientExample/: ClientExample.vcxproj  ClientExample.vcxproj.filters
ClientExample/src/: test.cpp
Relay/: Relay.cpp  Relay.vcxproj  Relay.vcxproj.filters
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters
Server/include/: weyvelength_server.h
Server/src/: main.cpp  test_server.cpp  weyvelength_server.cpp
Shared/: CMakeLists.txt  Shared.vcxitems  framing.h  protocol.h
Tests/: Tests.vcxproj  Tests.vcxproj.filters
Tests/src/: test_marshal.cpp  test_protocol.cpp
client/: .gitignore  index.html  package.json
client/src/: App.tsx  index.tsx  types.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: grpc.rs  lib.rs  main.rs  state.rs  webrtc.rs
client/src-tauri/src/commands/: connection.rs  messaging.rs  mod.rs  sessions.rs  streaming.rs  webrtc.rs
client/src/components/: AddServerModal.tsx  AuthModal.tsx  ChannelPanel.tsx  ChatPane.tsx  CreateSessionModal.tsx  Dropdown.tsx  FormField.tsx  MemberListPanel.tsx  MessageList.tsx  Modal.tsx  ServerSidebar.tsx  SetupModal.tsx  Toast.tsx
client/src/store/: config.ts  index.ts  messaging.ts  server.ts  sessions.ts  streams.ts  ui.ts
client/src/styles/: App.css  ChannelPanel.css  ChatPane.css  Dropdown.css  MemberListPanel.css  ServerSidebar.css  SetupModal.css
proto/: weyvelength.proto
sdk/: .gitignore  Cargo.toml  INTEGRATION.md  build_example.bat  wl-sdk.h  wl_sdk.h
sdk/examples/: pingpong.c  pingpong.cpp  wl_gekko_adapter.cpp
sdk/src/: api.rs  core.rs  lib.rs  state.rs
server/: Cargo.toml  build.rs
server/src/: codegen.rs  main.rs  session.rs  state.rs
server/src/service/: auth.rs  helpers.rs  messaging.rs  mod.rs  sessions.rs  signals.rs  streams.rs
