[package]
name = "wl-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-prost-build = "0.14"
protox = "0.9.1"
